<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/selectimg"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/userImageView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginBottom="50dp"
            android:background="#E0E0E0"
            android:contentDescription="@string/user_image"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#80FFFFFF"
            android:text="@string/upload_image"
            android:textColor="#FF000000"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>
