<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="#FFFFFF"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image_desc" />

    <ImageView
        android:id="@+id/froyo_logo"
        android:layout_width="330dp"
        android:layout_height="42dp"
        android:layout_gravity="top|center_horizontal"
        android:contentDescription="상단로고"
        android:scaleType="fitCenter"
        android:src="@drawable/froyo_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/userImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="70dp"
            android:background="#E0E0E0"
            android:contentDescription="@string/user_image"
            android:clickable="true"
            android:focusable="true" />

        <!-- 업로드 버튼 -->
        <ImageButton
            android:id="@+id/uploadButton"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_marginBottom="0dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/upload_button" />

        <!-- 삭제 버튼 -->
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:background="@null"
            android:scaleType="centerInside"
            android:src="@drawable/delete_button" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="#C0C0C0"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="#FAFAFA"
        android:elevation="4dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/folder_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/folder"
            android:scaleType="centerInside"
            android:contentDescription="@string/question_list" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/on_add_btn"
            android:scaleType="centerInside"
            android:contentDescription="@string/make_question" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/settings"
            android:scaleType="centerInside"
            android:contentDescription="@string/setting" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">

            <!-- 로딩 ProgressBar -->
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <!-- 로딩 텍스트 -->
            <TextView
                android:id="@+id/loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="이미지 생성중..."
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

    </FrameLayout>



</FrameLayout>
